kubernetes/DevOps-with-Kubernetes/Chapter05/5-2-1_nginx.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 2
  template:
    metadata:
      name: nginx
      labels:
        project: chapter5
        service: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80

---

kind: Service
apiVersion: v1
metadata:
  name: nginx
spec:
  type: NodePort
  selector:
    project: chapter5
    service: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
